--- a/certificates.html
+++ b/certificates.html
@@ -60,11 +60,11 @@
   <h1>My Certificates</h1>
 
   <div class="cert-container">
-    <a href="https://drive.google.com/file/d/1khPZuS7bFkTYZ0ziG9WvXHrjjYA-UPWM/view?usp=drive_link" class="cert-link" target="_blank">Certificate 1</a>
-    <a href="https://drive.google.com/file/d/1MiMUhekVSjtb9ccYgldNBkz_UlRtK6lF/view?usp=drive_link" class="cert-link" target="_blank">Certificate 2</a>
-    <a href="https://drive.google.com/file/d/1OtT_mUV3PTFXim7KJxvbWXFJabtRJNv4/view?usp=drive_link" class="cert-link" target="_blank">Certificate 3</a>
-    <a href="https://drive.google.com/file/d/1ycP741bzm5pjOKs5lql20qbUsnURNtcl/view?usp=drive_link" class="cert-link" target="_blank">Certificate 4</a>
-    <a href="https://drive.google.com/file/d/1vx7HCPa8hyHQzrWvwAdZ7ZePe6OJQqXP/view?usp=drive_link" class="cert-link" target="_blank">Certificate 5</a>
+    <a href="https://drive.google.com/file/d/1khPZuS7bFkTYZ0ziG9WvXHrjjYA-UPWM/view?usp=drive_link" class="cert-link" target="_blank">Introduction to Cyber Security</a>
+    <a href="https://drive.google.com/file/d/1MiMUhekVSjtb9ccYgldNBkz_UlRtK6lF/view?usp=drive_link" class="cert-link" target="_blank">Artificial Intelligence</a>
+    <a href="https://drive.google.com/file/d/1OtT_mUV3PTFXim7KJxvbWXFJabtRJNv4/view?usp=drive_link" class="cert-link" target="_blank">Marketing</a>
+    <a href="https://drive.google.com/file/d/1ycP741bzm5pjOKs5lql20qbUsnURNtcl/view?usp=drive_link" class="cert-link" target="_blank">Power BI</a>
+    <a href="https://drive.google.com/file/d/1vx7HCPa8hyHQzrWvwAdZ7ZePe6OJQqXP/view?usp=drive_link" class="cert-link" target="_blank">Python</a>
     
   </div>
 
@@ -72,3 +72,4 @@
 
 </body>
 </html>
+
