--- a/index.html
+++ b/index.html
@@ -267,7 +267,11 @@
         <div class="skill-bar"><div class="skill-fill ml"></div></div>
       </div>
       <div class="skill">
-        <h3>Computer Vision</h3>
+        <h3>PowerBI</h3>
+        <div class="skill-bar"><div class="skill-fill cv"></div></div>
+      </div>
+      <div class="skill">
+        <h3>MySQL</h3>
         <div class="skill-bar"><div class="skill-fill cv"></div></div>
       </div>
     </div>
@@ -409,3 +413,4 @@ Enhanced security by integrating IAM roles and bucket policies for controlled ac
   </footer>
 </body>
 </html>
+
