--- a/index.html
+++ b/index.html
@@ -234,7 +234,11 @@
     <h2>About Me</h2>
     <img src="profile.jpg" alt="Profile Picture" class="profile-img" />
     <p>
-      I am a passionate software developer who loves building real-world solutions using AI, computer vision, and full-stack development. I focus on creating meaningful technology that improves user experience, accessibility, and automation.
+      I am a passionate and detail-oriented Software and Cloud Enthusiast with strong hands-on experience in Python development, data analysis, and AWS cloud technologies. I enjoy building practical, real-world applications that combine clean design, efficient logic, and scalable deployment.
+
+I have worked on projects involving frontend development (HTML, CSS, JavaScript), data visualization using Power BI, and cloud-based CI/CD pipelines using AWS services such as S3, CloudFront, and CodePipeline. I am particularly interested in creating automated solutions, deploying applications to the cloud, and continuously improving performance and user experience.
+
+I am a continuous learner who actively upskills in Artificial Intelligence, data analytics, and cloud computing, and I enjoy solving problems that require both analytical thinking and creativity. My goal is to contribute to impactful projects, grow as a professional, and deliver reliable, user-focused software solutions.
     </p>
     <a href="#" class="btn">Download Resume</a>
     <a href="#" class="btn">View Certificates</a>
@@ -413,4 +417,5 @@ Enhanced security by integrating IAM roles and bucket policies for controlled ac
   </footer>
 </body>
 </html>
+
 
